<resources>
    <string name="app_name">TestAppForHandyMama</string>
    <string name="discover_movies">Discover Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="person">Person</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="search_here">Search Here</string>
    <string name="upcoming_movies">Upcoming Movies</string>
</resources>
